syntax = 'proto3';
package org.dneversky.gateway;

message EmptyUser {}

message Users {
  repeated User users = 1;
}

message UserId {
  int64 id = 1;
}

message UserIds {
  repeated int64 ids = 1;
}

message User {
  int64 id = 1;
  string nickname = 2;
  string teamId = 3;
  repeated string specsIds = 4;
}

message UserRole {
  int64 userId = 1;
  repeated string roleName = 2;
}

message UserPassword {
  int64 userId = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message NewUser {
  string nickname = 1;
  string username = 2;
  string password = 3;
}

message UserTeamIds {
  int64 userId = 1;
  string teamId = 2;
}

message UserSpecsIds {
  int64 userId = 1;
  repeated string specsIds = 2;
}

service UserService {
  rpc getUsersByIds(UserIds) returns (Users);
  rpc getUsers(EmptyUser) returns (Users);
  rpc getUserById(UserId) returns (User);
  rpc createUser(NewUser) returns (User);
  rpc updateUser(User) returns (User);
  rpc changeRoles(UserRole) returns (User);
  rpc changePassword(UserPassword) returns (User);
  rpc deleteUser(UserId) returns (User);
  rpc changeTeam(UserTeamIds) returns (User);
  rpc changeSpecs(UserSpecsIds) returns (User);
}